# chess-hs

./: .dir-locals.el  .gitignore  CHANGELOG.md  LICENSE  README.md  chess-hs.cabal  flake.nix  set-up.sh  shell.nix
app/: Main.hs  TerminalMain.hs
src/Chess/: Board.hs  Board.hs.bak  Game.hs  GameState.hs  Move.hs  Pieces.hs  Rules.hs
src/Chess/UI/: Common.hs  GTK.hs  Terminal.hs
